--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
+    
+    <script language="javascript" type="text/javascript">
+    <!--
+     //window.open('file:///android_asset/www/index.html');
+     window.location = 'https://tribesocial.com/authenticate/android';
+    // -->
+    </script>
+
   </head>
   <body>
     <div class="wrapper">
